# libserial

./: CMakeLists.txt  README.md
src/: endian.h  master.cc  master.h
src/crc/: crc.cc  crc.h
src/log/: log.cc  log.h
src/protocol/: frame.cc  frame.h  layer.cc  layer.h
src/raw/: serial_base.h  serial_linux.cc  serial_linux.h  serial_win32.cc  serial_win32.h
test/: CMakeLists.txt  test.cc
